[package]
name = "gusto"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "engine"]

[dev-dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
gusto-core = { "path" = "./core" }
gusto-engine = { "path" = "./engine" }
tokio = { version = "1.20.0", features = ["rt", "macros", "time"] }
