[package]
name = "gusto-engine"
version = "0.1.0"
description = "Gusto Engine"
authors = ["Nicolas Gryman"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
flume = "0.10.13"
gusto-core = { path = "../core" }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
tokio = { version = "1.20.0", features = ["rt", "sync"] }
uuid = { version = "1.1.2", features = ["v4"] }
